update model and refactor